date grid numbers on mobile fix

--- a/assets/common/css/main.scss
+++ b/assets/common/css/main.scss
@@ -352,8 +352,7 @@ footer {
       border-radius: 4px;
       &-signup {
         background-color: rgba(81, 117, 255, 0.1);
-        height: 92px;
-        width: 72px;
+        width: 23%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
@@ -477,6 +476,9 @@ h3 {
       font-weight: bold;
       color: $softBlue;
       &__signup {
+        font-size: 32px;
+        font-weight: bold;
+        color: $softBlue;
         @media (min-width: 768px) {
           font-size: 56px;
           font-weight: bold;
